[package]
name = "telepass"
version = "1.0.0"
license = "MIT"
edition = "2024"
description = "Telegram Mini App init data validation and parsing"
repository = "https://github.com/Timbermir/telepass"

[dependencies]
hex = { version = "0.4.3" }
hmac = { version = "0.12.1" }
sha2 = { version = "0.10.9" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
serde_urlencoded = { version = "0.7.1" }
thiserror = { version = "2.0.18" }